[package]
name = "raspberry-pi-rust"
version = "0.1.0"
authors = ["takayuki tanaka <takayuki.1981.0317@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"
opt-level = 0
incremental = true

[profile.release]
panic = "abort"

[build-dependencies]
cc = "1.0"

[dependencies]
rlibc = "1.0.0"
